--- a/flask/Dockerfile_flask
+++ b/flask/Dockerfile_flask
@@ -3,10 +3,11 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+# Copiar o arquivo de dependências
 COPY requirements.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-#COPY . .
+# Copiar o código do app.py
 COPY app.py /app/
 
-CMD ["flask", "run", "--host=0.0.0.0"]
+CMD ["sh", "-c", "sleep 15 && flask run --host=0.0.0.0"]
