--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
   flask:
     build:
@@ -19,8 +17,10 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root_password
       MYSQL_DATABASE: school_db
+      MYSQL_USER: flask_user          # Added MYSQL_USER to define the user
+      MYSQL_PASSWORD: flask_password  # Added MYSQL_PASSWORD to define the user's password
     ports:
-      - "3306:3306"  # Expondo a porta 3306 do container para a 3306 da máquina host
+      - "3306:3306"
     networks:
       - app_network
 
@@ -60,3 +60,4 @@ services:
 networks:
   app_network:
     driver: bridge
+
